--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -10,7 +10,7 @@ body{
 	position: relative;
 	color: #252526;
 	background-color: #fff;
-	// overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 .wrapper{
@@ -32,7 +32,7 @@ body{
 .nav-menu{
 	&__mob{
 		display: none;
-		margin-top: 73px;
+		margin-top: 101px;
 		a{
 			display: block;
 		}
@@ -74,6 +74,23 @@ body{
 	&__nav{
 		margin-top: 33px;
 	}
+	&__right{
+		display: none;
+		align-items: center;
+		margin-left: auto;
+		&-btn{
+			padding: 18px 24px;
+			font-size: 14px;
+			margin-left: 32px;
+		}
+		&-link{
+			font-family: 'Roboto';
+			font-weight: bold;
+			font-size: 16px;
+			letter-spacing: 0.03em;
+			color: #18325E;
+		}
+	}
 	&_active{
 		border: 1px solid rgba(#252526, 0.3);
 		.top-menu__wrap{
@@ -106,6 +123,9 @@ body{
 		background: #FFFFFF;
 		filter: drop-shadow(0px 6px 32px rgba(158, 149, 149, 0.36));
 		border: 0;
+		.top-menu__right{
+			display: flex;
+		}
 	}
 }
 
@@ -167,7 +187,7 @@ body{
 	background-size: cover;
 	position: relative;
     background-attachment: fixed;
-    min-height: 100vh;
+    // min-height: 100vh;
 	&::before{
 		content: '';
 		position: absolute;
